<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top">
        <ImageButton android:id="@+id/back_create_shop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:paddingTop="10dp"
                     android:background="@drawable/ret_01"
                     android:layout_centerVertical="true"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:padding="5dp"
                  android:text="@string/set_up_shop"
                  android:textColor="#FFFFFF"
                  android:textSize="20sp"/>
        <Button android:id="@+id/finishRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/finish_set_up_shop_button"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:background="#00000000"/>
    </RelativeLayout>
    <ScrollView android:id="@+id/create_shop_scrollView"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                android:layout_marginBottom="10dp"
                android:cacheColorHint="#00000000"
                android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:focusableInTouchMode="true"
                      android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/cjdp_bg_02"
                          android:gravity="center"
                          android:layout_marginTop="8dp"
                          android:layout_marginLeft="15dp"
                          android:layout_marginRight="15dp"
                          android:padding="15dp">
                <LinearLayout android:layout_width="wrap_content"
                              android:background="@drawable/fillet_image"
                              android:layout_height="wrap_content">
                    <ImageView android:id="@+id/addShopImage"
                               android:layout_height="75dp"
                               android:layout_width="75dp"/>
                </LinearLayout>
                <TextView android:text="@string/add_shop_image"
                          android:gravity="center"
                          android:textSize="15sp"
                          android:textColor="@color/darkgray"
                          android:layout_height="match_parent"
                          android:layout_width="match_parent"
                          android:background="#00000000"/>
            </LinearLayout>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp">
                <TextView android:id="@+id/cj_01"
                          android:layout_height="wrap_content"
                          android:layout_width="match_parent"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:text="@string/shop_info"
                          android:textSize="15sp"
                          android:background="@drawable/cj_bg_01"/>
                <TextView android:id="@+id/cj_02"
                          android:layout_height="match_parent"
                          android:layout_width="wrap_content"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:text="@string/shop_name"
                          android:textSize="15sp"
                          android:layout_below="@id/cj_01"
                          android:background="@drawable/cj_bg_02"/>
                <EditText android:id="@+id/cj_03"
                          android:singleLine="true"
                          android:maxLength="26"
                          android:layout_height="match_parent"
                          android:layout_width="match_parent"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:paddingRight="5dp"
                          android:hint="@string/shop_name_10word"
                          android:textSize="15sp"
                          android:layout_below="@id/cj_01"
                          android:layout_toRightOf="@id/cj_02"
                          android:background="@drawable/cj_bg_03"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp">
                <TextView android:id="@+id/cj_01"
                          android:layout_height="wrap_content"
                          android:layout_width="match_parent"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:text="@string/phone_way"
                          android:textSize="15sp"
                          android:background="@drawable/cj_bg_01"/>
                <TextView android:id="@+id/cj_02"
                          android:layout_height="match_parent"
                          android:layout_width="wrap_content"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:text="@string/phone_number"
                          android:textSize="15sp"
                          android:layout_below="@id/cj_01"
                          android:background="@drawable/cj_bg_02"/>
                <EditText android:id="@+id/cj_phone"
                          android:singleLine="true"
                          android:maxLength="26"
                          android:layout_height="match_parent"
                          android:layout_width="match_parent"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:paddingRight="5dp"
                          android:hint="@string/phone_or_mobile"
                          android:textSize="15sp"
                          android:layout_below="@id/cj_01"
                          android:layout_toRightOf="@id/cj_02"
                          android:background="@drawable/cj_bg_03"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="15dp">
                <TextView android:id="@+id/cj_04"
                          android:layout_height="wrap_content"
                          android:layout_width="match_parent"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:text="@string/shop_introduce"
                          android:textSize="15sp"
                          android:background="@drawable/cj_bg_04"/>
                <EditText android:id="@+id/cj_shop_info"
                          android:layout_height="wrap_content"
                          android:layout_width="match_parent"
                          android:gravity="center_vertical"
                          android:padding="15dp"
                          android:hint="@string/shop_name_300word"
                          android:textSize="15sp"
                          android:layout_below="@id/cj_04"
                          android:background="@drawable/cj_bg_05"/>
            </RelativeLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:paddingLeft="15dp"
                          android:paddingRight="15dp"
                          android:paddingTop="10dp">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="match_parent"
                          android:gravity="center_vertical"
                          android:paddingLeft="15dp"
                          android:textSize="15sp"
                          android:background="@drawable/cj_bg_04"
                          android:text="@string/goods_staples"/>
                <LinearLayout android:id="@+id/layout"
                              android:background="@drawable/cj_bg_05"
                              android:paddingLeft="15dp"
                              android:paddingRight="15dp"
                              android:layout_width="match_parent"
                              android:orientation="vertical"
                              android:gravity="center_horizontal"
                              android:layout_height="wrap_content">
                    <com.example.goldfoxchina.menu.GrapeGridview android:id="@+id/shop_all_sort"
                                                                 android:listSelector="@drawable/hzy_grid_selector"
                                                                 android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:paddingTop="5dp"
                                                                 android:scrollbars="none"
                                                                 android:horizontalSpacing="10dp"
                                                                 android:verticalSpacing="7dp"
                                                                 android:numColumns="4"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
