<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/gray"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top">
        <ImageButton android:id="@+id/go_to_checkDetailActivity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="10dp"
                     android:paddingTop="10dp"
                     android:background="@drawable/ret_01"
                     android:layout_centerVertical="true"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:padding="5dp"
                  android:text="@string/add_detail"
                  android:textColor="#FFFFFF"
                  android:textSize="20sp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                android:enabled="false"
                android:text="@string/my_shop_title"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:background="#00000000"
                />
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:gravity="center_vertical"
                          android:background="@drawable/tp_bg_01_04"
                          android:textColor="@color/black"
                          android:textSize="15sp"
                          android:paddingLeft="10dp"
                          android:text="@string/goods_leavings"/>
                <EditText android:id="@+id/goodInventoryCount"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@drawable/tp_bg_01_05"
                          android:textColor="@color/black"
                          android:text=""
                          android:hint="@string/please_write_number"
                          android:digits="@string/all_numbers_words"
                          android:textSize="15sp"
                          android:paddingLeft="5dp"
                          android:gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:gravity="center_vertical"
                          android:background="@drawable/tt_textbox_04"
                          android:textColor="@color/black"
                          android:textSize="15sp"
                          android:paddingLeft="10dp"
                          android:text="@string/goods_color"/>
                <EditText android:id="@+id/goodColor"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@drawable/tt_textbox_05"
                          android:textColor="@color/black"
                          android:hint="@string/please_write_words"
                          android:text=""
                          android:textSize="15sp"
                          android:paddingLeft="5dp"
                          android:gravity="center_vertical"
                        />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:gravity="center_vertical"
                          android:background="@drawable/tt_textbox_04"
                          android:textColor="@color/black"
                          android:textSize="15sp"
                          android:paddingLeft="10dp"
                          android:text="@string/goods_size"/>
                <EditText android:id="@+id/goodSize"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@drawable/tt_textbox_05"
                          android:textColor="@color/black"
                          android:textSize="15sp"
                          android:text=""
                          android:hint="@string/please_write_words"
                          android:paddingLeft="5dp"
                          android:gravity="center_vertical"
                        />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:gravity="center_vertical"
                          android:background="@drawable/tt_textbox_04"
                          android:textColor="@color/black"
                          android:textSize="15sp"
                          android:paddingLeft="10dp"
                          android:text="@string/goods_price"/>
                <EditText android:id="@+id/goodBidPrice"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@drawable/tt_textbox_05"
                          android:textColor="@color/black"
                          android:digits="@string/all_numbers_words"
                          android:hint="@string/please_write_number"
                          android:textSize="15sp"
                          android:paddingLeft="5dp"
                          android:gravity="center_vertical"
                        />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:gravity="center_vertical"
                          android:background="@drawable/tt_textbox_07"
                          android:textColor="@color/black"
                          android:textSize="15sp"
                          android:paddingLeft="10dp"
                          android:text="@string/goods_move_price"/>
                <EditText android:id="@+id/goodSellingPrice"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@drawable/tt_textbox_08"
                          android:textColor="@color/black"
                          android:hint="@string/please_write_number"
                          android:digits="@string/all_numbers_words"
                          android:textSize="15sp"
                          android:paddingLeft="5dp"
                          android:gravity="center_vertical"
                        />
            </LinearLayout>

            <LinearLayout android:id="@+id/add_goods_detail_layout"
                          android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:gravity="center"
                          android:layout_marginTop="20dp"
                          android:background="@drawable/wddp_tjbutton_n1"
                          android:layout_height="wrap_content">
                <TextView android:id="@+id/add_edit_edit"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/white"
                          android:textSize="18sp"
                          android:text="提交"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>